--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="public/js/CSPL.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <style type="text/css">
     body {
